tests/negative/gold/importB-test.gold
tests/negative/importB-test.toit:5:1: error: Failed to import '.dir'
import .dir as pre
^~~~~~
tests/negative/importB-test.toit:5:9: note: Cannot read 'tests/negative/dir.toit': not a regular file
import .dir as pre
        ^~~
tests/negative/importB-test.toit:6:1: error: Failed to import '.dir2'
import .dir2 as pre
^~~~~~
tests/negative/importB-test.toit:6:9: note: Folder 'tests/negative/dir2' exists, but is missing a 'dir2.toit' file
import .dir2 as pre
        ^~~~
tests/negative/importB-test.toit:7:1: error: Failed to import '.dir2.foo'
import .dir2.foo as toto
^~~~~~
tests/negative/importB-test.toit:7:14: note: Missing library file. Tried 'tests/negative/dir2/foo.toit' and 'tests/negative/dir2/foo/foo.toit'
import .dir2.foo as toto
             ^~~
tests/negative/importB-test.toit:8:1: error: Failed to import '.dir2.foo.bar'
import .dir2.foo.bar as toto
^~~~~~
tests/negative/importB-test.toit:8:14: note: Cannot enter 'tests/negative/dir2/foo': folder does not exist
import .dir2.foo.bar as toto
             ^~~
tests/negative/importB-test.toit:9:1: error: Failed to import '.dir2.not-directory.bar'
import .dir2.not-directory.bar as toto
^~~~~~
tests/negative/importB-test.toit:9:14: note: Cannot enter 'tests/negative/dir2/not_directory': not a folder
import .dir2.not-directory.bar as toto
             ^~~~~~~~~~~~~
Compilation failed
